# django-toosimple-q

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_tests.txt  setup.cfg  setup.py  test_concurrency.py  tests.py
.github/workflows/: pypi.yml  test.yml
demoproject/: settings.py  urls.py
demoproject/concurrency/: tasks.py
demoproject/demoapp/: tasks.py
django_toosimple_q/: __init__.py  admin.py  apps.py  core.py  decorators.py  logging.py  models.py  registry.py  schedule.py  task.py  tests.py  utils.py
django_toosimple_q/migrations/: 0001_initial.py  0002_auto_20191101_1838.py  0003_task_queue.py  0004_auto_20200507_1339.py  0005_auto_20210302_1748.py  0006_task_replacement.py  0007_schedule_datetime_kwarg.py  0008_auto_20210902_2111.py  0009_auto_20210902_2245.py  0010_auto_20220323_2140.py  0010_auto_20220324_0419.py  0011_auto_20220323_2350.py  0011_workerstatus.py  0012_rename_function_taskexec_task_name.py  0012_rename_last_run_scheduleexec_last_task.py  0013_auto_20220324_0245.py  0013_workerstatus_exit_code_workerstatus_exit_log.py  0014_alter_workerstatus_exit_code.py  0014_taskexec_error.py  0015_scheduleexec_state.py  0015_taskexec_result_preview.py  0016_alter_scheduleexec_options_alter_taskexec_options.py  0016_auto_20220324_0408.py
scripts/: ci_assert_version_from_git.py  ci_set_version_from_git.py
tests/: settings.py  test_admin.py  test_mail.py  test_models.py  urls.py  utils.py
(+25 files in other folders)
