[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.6"
name = "django-toosimple-q"
authors = [{ name = "Olivier Dalang", email = "olivier.dalang@gmail.com" }]
description = "A simplistic task queue and cron-like scheduler for Django"
keywords = ["django", "task", "queue", "worker", "scheduler", "cron", "job"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
license = { text = "MIT License" }
dynamic = ["version", "readme"]
dependencies = [
    "django>=3.2",
    "django-picklefield>=3.0",
    "croniter>=1.3",
]

[project.optional-dependencies]
dev = [
    # tests
    "freezegun==1.2.1",
    "psycopg2==2.*",
    # devenv
    "pre-commit",
    "mypy",
]

[project.urls]
homepage = "https://github.com/olivierdalang/django-toosimple-q"
repository = "https://github.com/olivierdalang/django-toosimple-q"
tracker = "https://github.com/olivierdalang/django-toosimple-q/issues"

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "django_toosimple_q/__version__.py"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }
